--- a/src/styles.css
+++ b/src/styles.css
@@ -60,33 +60,182 @@ body {
 
 .container {
 	display: flex;
-	outline: 1px solid;
+	/* outline: 1px solid; */
 	border-radius: var(--border-radius);
 	margin: 50px auto 50px;
-	width: 900px;
-	height: 475px;
+	width: 920px;
+	height: 485px;
 	padding-top: 28px;
 	padding-bottom: 28px;
 	background: var(--clr-white);
 	justify-content: space-between;
 }
 
+/* ===== Section entradas ===== */
 .section-entradas {
-	outline: 1px solid;
+	/* outline: 1px solid; */
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	background: var(--clr-white);
-	width: 408px;
+	width: 415px;
 	border-radius: var(--border-radius);
 	margin-left: 28px;
 	overflow: hidden;
 }
 
+.factura-total {
+	/* outline: 1px solid; */
+	margin: 24px 10px 20px 10px;
+}
+
+.factura-total h3 {
+	font-size: 18px;
+	color: var(--clr-dark-grayish-cyan);
+	margin-bottom: 3px;
+}
+
+.input-factura-total {
+	/* outline: 2px solid var(--clr-primary-1); */
+	background-color: var(--clr-light-grayish-cyan-2);
+	background-image: url(../images/icon-dollar.svg);
+	background-repeat: no-repeat;
+	background-position: 10px center;
+	padding-right: 10px;
+	border-radius: 5px;
+	color: var(--clr-very-dark-cyan);
+	font-family: var(--ff-primary);
+	font-size: 24px;
+	font-weight: bold;
+	text-align: right;
+	width: 100%;
+	height: 48px;
+	border: none;
+}
+
+/* Agregar con JavaScript */
+/* .input-factura-total-color {
+	border: 2px solid var(--clr-primary-1);
+} */
+
+::placeholder {
+	color: var(--clr-dark-grayish-cyan-2);
+}
+
+.porcentajes-propina {
+	margin: 24px 10px 20px 10px;
+}
+
+.porcentajes-propina h3 {
+	font-size: 18px;
+	color: var(--clr-dark-grayish-cyan);
+	margin-bottom: 3px;
+}
+
+.porcentajes-propina-btns {
+	display: grid;
+	grid-gap: 10px;
+	/* width: 120px; */
+	/* height: 48px; */
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: 1fr 1fr;
+}
+
+.btn {
+	border: none;
+	border-radius: 5px;
+	background-color: var(--clr-very-dark-cyan);
+	font-family: var(--ff-primary);
+	font-size: var(--fs-primary);
+	font-weight: bold;
+	color: var(--clr-white);
+}
+
+.input-porcentajes-propina {
+	background-color: var(--clr-light-grayish-cyan-2);
+	padding-right: 10px;
+	padding-left: 10px;
+	border-radius: 5px;
+	color: var(--clr-very-dark-cyan);
+	font-family: var(--ff-primary);
+	font-size: 28px;
+	font-weight: bold;
+	text-align: right;
+	width: 100%;
+	height: 48px;
+	border: none;
+}
+
+/* Agregar con JavaScript */
+/* .input-porcentajes-propina-color {
+	border: 2px solid var(--clr-primary-1);
+} */
+
+.input-porcentajes-propina::placeholder {
+	text-align: center;
+}
+
+.numero-personas {
+	/* outline: 1px solid; */
+	margin: 24px 10px 20px 10px;
+}
+
+.numero-personas__title {
+	display: flex;
+	justify-content: space-between;
+}
+
+.numero-personas__title h3 {
+	font-size: 18px;
+	color: var(--clr-dark-grayish-cyan);
+	margin-bottom: 3px;
+}
+
+.show-title {
+	color: orange;
+}
+
+/* Quitar con JavaScript */
+.no-mostrar {
+	visibility: hidden;
+}
+
+.input-numero-personas {
+	background-color: var(--clr-light-grayish-cyan-2);
+	background-image: url(../images/icon-person.svg);
+	background-repeat: no-repeat;
+	background-position: 10px center;
+	padding-right: 10px;
+	border-radius: 5px;
+	color: var(--clr-very-dark-cyan);
+	font-family: var(--ff-primary);
+	font-size: 24px;
+	font-weight: bold;
+	text-align: right;
+	width: 100%;
+	height: 48px;
+	border: none;
+}
+
+/* Mostrar con JavaScript */
+/* .input-numero-personas-color {
+	border: 2px solid orange;
+} */
+
+/* ===== Section salidas ===== */
 .section-salidas {
-	outline: 1px solid;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 	background: var(--clr-very-dark-cyan);
-	width: 408px;
+	width: 415px;
 	border-radius: var(--border-radius);
 	margin-right: 28px;
 	overflow: hidden;
+}
+
+.section-salidas h3 {
+	display: inline;
 }
 
 .attribution {
