--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* ===== Fuentes ===== */
-@import url("https://fonts.google.com/specimen/Space+Mono");
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono&display=swap");
 
 /* ===== Variables ===== */
 :root {
@@ -28,7 +28,9 @@
 	--border-radius: 25px;
 }
 
-/* ===== Estilos globales ===== */
+/* ==================================================== */
+/* ================= Estilos globales ================= */
+/* ==================================================== */
 * {
 	margin: 0;
 	padding: 0;
@@ -36,22 +38,15 @@
 }
 
 body {
-	/* display: flex; */
-	/* flex-direction: column; */
-	/* justify-content: space-between; */
-	/* align-items: ; */
 	font-family: var(--ff-primary);
 	background: var(--clr-light-grayish-cyan);
-	/* line-height: 1.5; */
 	font-size: var(--fs-primary);
-	/* height: 100vh; */
 }
 
 .title {
 	text-align: center;
 	letter-spacing: 0.35rem;
 	text-transform: uppercase;
-	/* line-height: 1.25; */
 	color: rgb(66, 101, 103);
 	align-content: center;
 	margin: 100px auto 80px;
@@ -60,7 +55,6 @@ body {
 
 .container {
 	display: flex;
-	/* outline: 1px solid; */
 	border-radius: var(--border-radius);
 	margin: 50px auto 50px;
 	width: 920px;
@@ -71,9 +65,10 @@ body {
 	justify-content: space-between;
 }
 
-/* ===== Section entradas ===== */
+/* ==================================================== */
+/* ================= Section entradas ================= */
+/* ==================================================== */
 .section-entradas {
-	/* outline: 1px solid; */
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -85,18 +80,16 @@ body {
 }
 
 .factura-total {
-	/* outline: 1px solid; */
 	margin: 24px 10px 20px 10px;
 }
 
 .factura-total h3 {
-	font-size: 18px;
+	font-size: 16px;
 	color: var(--clr-dark-grayish-cyan);
-	margin-bottom: 3px;
+	margin-bottom: 5px;
 }
 
 .input-factura-total {
-	/* outline: 2px solid var(--clr-primary-1); */
 	background-color: var(--clr-light-grayish-cyan-2);
 	background-image: url(../images/icon-dollar.svg);
 	background-repeat: no-repeat;
@@ -113,6 +106,11 @@ body {
 	border: none;
 }
 
+.input-factura-total:focus {
+	outline: none;
+	border: 2px solid var(--clr-primary-1);
+}
+
 /* Agregar con JavaScript */
 /* .input-factura-total-color {
 	border: 2px solid var(--clr-primary-1);
@@ -127,16 +125,14 @@ body {
 }
 
 .porcentajes-propina h3 {
-	font-size: 18px;
+	font-size: 16px;
 	color: var(--clr-dark-grayish-cyan);
-	margin-bottom: 3px;
+	margin-bottom: 5px;
 }
 
 .porcentajes-propina-btns {
 	display: grid;
 	grid-gap: 10px;
-	/* width: 120px; */
-	/* height: 48px; */
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: 1fr 1fr;
 }
@@ -149,6 +145,12 @@ body {
 	font-size: var(--fs-primary);
 	font-weight: bold;
 	color: var(--clr-white);
+	cursor: pointer;
+}
+
+.btn:hover {
+	background-color: var(--clr-primary-1);
+	color: var(--clr-very-dark-cyan);
 }
 
 .input-porcentajes-propina {
@@ -175,8 +177,12 @@ body {
 	text-align: center;
 }
 
+.input-porcentajes-propina:focus {
+	outline: none;
+	border: 2px solid var(--clr-primary-1);
+}
+
 .numero-personas {
-	/* outline: 1px solid; */
 	margin: 24px 10px 20px 10px;
 }
 
@@ -186,8 +192,13 @@ body {
 }
 
 .numero-personas__title h3 {
-	font-size: 18px;
+	font-size: 16px;
 	color: var(--clr-dark-grayish-cyan);
+	margin-bottom: 5px;
+}
+
+.numero-personas__title h4 {
+	font-size: 18px;
 	margin-bottom: 3px;
 }
 
@@ -217,12 +228,19 @@ body {
 	border: none;
 }
 
+.input-numero-personas:focus {
+	outline: none;
+	border: 2px solid orange;
+}
+
 /* Mostrar con JavaScript */
 /* .input-numero-personas-color {
 	border: 2px solid orange;
 } */
 
-/* ===== Section salidas ===== */
+/* ==================================================== */
+/* ================= Section salidas ================= */
+/* ==================================================== */
 .section-salidas {
 	display: flex;
 	flex-direction: column;
@@ -234,10 +252,85 @@ body {
 	overflow: hidden;
 }
 
-.section-salidas h3 {
-	display: inline;
+.propina-persona {
+	/* outline: 1px solid white; */
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 336px;
+	height: 50px;
+	align-self: center;
+	margin: 55px 10px 20px 10px;
 }
 
+.propina-persona h3 {
+	font-family: var(--ff-primary);
+	color: var(--clr-white);
+	font-size: 14px;
+}
+
+.propina-persona span {
+	color: var(--clr-dark-grayish-cyan);
+}
+
+.propina-persona h4 {
+	color: var(--clr-primary-1);
+	font-size: 46px;
+}
+
+.propina-total {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 336px;
+	height: 50px;
+	align-self: center;
+	margin: 24px 10px 20px 10px;
+}
+
+.propina-total h3 {
+	color: var(--clr-white);
+	font-size: 14px;
+}
+
+.propina-total span {
+	color: var(--clr-dark-grayish-cyan);
+}
+
+.propina-total h4 {
+	color: var(--clr-primary-1);
+	font-size: 46px;
+}
+
+.reset {
+	width: 336px;
+	height: 50px;
+	margin: 100px 10px 40px 10px;
+	border: none;
+	align-self: center;
+}
+
+.btn-reset {
+	width: 100%;
+	height: 100%;
+	border: none;
+	border-radius: 5px;
+	font-family: var(--fs-primary);
+	font-size: var(--fs-primary);
+	font-weight: bold;
+	text-transform: uppercase;
+	color: var(--clr-very-dark-cyan);
+	background-color: rgb(13, 104, 109);
+	cursor: pointer;
+}
+
+.btn-reset:hover {
+	background-color: var(--clr-primary-1);
+}
+
+/* ================================================ */
+/* ==================== Footer ==================== */
+/* ================================================ */
 .attribution {
 	text-align: center;
 	font-size: 11px;
